--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^1.9.82",
     "gatsby-image": "^1.0.16",
     "gatsby-link": "^1.6.23",
+    "gatsby-plugin-google-tagmanager": "^1.0.7",
     "gatsby-plugin-manifest": "^1.0.8",
     "gatsby-plugin-netlify": "^1.0.6",
     "gatsby-plugin-offline": "^1.0.10",
