--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-offline": "^1.0.10",
     "gatsby-plugin-sass": "^1.0.12",
     "gatsby-plugin-sharp": "^1.6.13",
+    "gatsby-plugin-sitemap": "^1.2.5",
     "gatsby-source-filesystem": "^1.5.5",
     "gatsby-transformer-sharp": "^1.6.13",
     "react": "^15.0.0"
