--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "gatsby-plugin-sitemap": "^1.2.5",
     "gatsby-source-filesystem": "^1.5.5",
     "gatsby-transformer-sharp": "^1.6.13",
-    "react": "^16.2.0"
+    "i18next": "^10.3.0",
+    "i18next-browser-languagedetector": "^2.1.0",
+    "i18next-xhr-backend": "^1.5.1",
+    "react": "^16.2.0",
+    "react-i18next": "^7.3.4"
   },
   "keywords": [
     "ledgy"
@@ -57,6 +61,6 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "flow-bin": "^0.63.1"
+    "flow-bin": "^0.64.0"
   }
 }
