--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Ledgy AG <contact@ledgy.com>",
   "repository": "morloy/ledgy-app",
   "dependencies": {
+    "@lingui/react": "^2.0.5",
     "gatsby": "^1.9.183",
     "gatsby-image": "^1.0.35",
     "gatsby-link": "^1.6.36",
@@ -13,6 +14,7 @@
     "gatsby-plugin-netlify": "^1.0.17",
     "gatsby-plugin-offline": "^1.0.15",
     "gatsby-plugin-react-helmet": "^2.0.4",
+    "gatsby-plugin-react-next": "^1.0.10",
     "gatsby-plugin-sass": "^1.0.18",
     "gatsby-plugin-sharp": "^1.6.13",
     "gatsby-plugin-sitemap": "^1.2.12",
@@ -22,6 +24,7 @@
     "i18next-browser-languagedetector": "^2.1.0",
     "i18next-xhr-backend": "^1.5.1",
     "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
     "react-i18next": "^7.3.4"
   },
@@ -56,6 +59,7 @@
     }
   },
   "devDependencies": {
+    "@lingui/babel-preset-react": "^2.0.5",
     "babel-eslint": "^8.2.2",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
