--- a/.flowconfig
+++ b/.flowconfig
@@ -4,11 +4,6 @@ module.file_ext=.json
 module.file_ext=.jsx
 module.file_ext=.css
 module.file_ext=.scss
-module.name_mapper='.*\(.scss\)' -> 'empty/object'
 
-suppress_comment= \\(.\\|\n\\)*\\eslint-disable-next-line no-undef
-
-[ignore]
-.*/node_modules/graphql-skip-limit/.*
-.*/node_modules/mitt/src/.*
-.*/node_modules/config-chain/test/broken.json
+module.system.node.resolve_dirname=src
+module.system.node.resolve_dirname=node_modules
