--- a/package.json
+++ b/package.json
@@ -5,25 +5,25 @@
   "author": "Ledgy AG <contact@ledgy.com>",
   "repository": "morloy/ledgy-app",
   "dependencies": {
-    "gatsby": "^1.9.183",
-    "gatsby-image": "^1.0.35",
-    "gatsby-link": "^1.6.36",
-    "gatsby-plugin-google-tagmanager": "^1.0.7",
-    "gatsby-plugin-manifest": "^1.0.8",
-    "gatsby-plugin-netlify": "^1.0.17",
-    "gatsby-plugin-offline": "^1.0.10",
-    "gatsby-plugin-react-helmet": "^2.0.4",
-    "gatsby-plugin-sass": "^1.0.12",
-    "gatsby-plugin-sharp": "^1.6.13",
-    "gatsby-plugin-sitemap": "^1.2.12",
-    "gatsby-source-filesystem": "^1.5.18",
-    "gatsby-transformer-sharp": "^1.6.18",
-    "i18next": "^10.3.0",
-    "i18next-browser-languagedetector": "^2.1.0",
-    "i18next-xhr-backend": "^1.5.1",
-    "react": "^16.2.0",
-    "react-helmet": "^5.2.0",
-    "react-i18next": "^7.3.4"
+    "gatsby": "1.9.183",
+    "gatsby-image": "1.0.35",
+    "gatsby-link": "1.6.36",
+    "gatsby-plugin-google-tagmanager": "1.0.7",
+    "gatsby-plugin-manifest": "1.0.8",
+    "gatsby-plugin-netlify": "1.0.17",
+    "gatsby-plugin-offline": "1.0.10",
+    "gatsby-plugin-react-helmet": "2.0.4",
+    "gatsby-plugin-sass": "1.0.12",
+    "gatsby-plugin-sharp": "1.6.13",
+    "gatsby-plugin-sitemap": "1.2.12",
+    "gatsby-source-filesystem": "1.5.18",
+    "gatsby-transformer-sharp": "1.6.18",
+    "i18next": "10.3.0",
+    "i18next-browser-languagedetector": "2.1.0",
+    "i18next-xhr-backend": "1.5.1",
+    "react": "16.2.0",
+    "react-helmet": "5.2.0",
+    "react-i18next": "7.3.4"
   },
   "keywords": [
     "ledgy"
