--- a/package.json
+++ b/package.json
@@ -5,34 +5,34 @@
   "author": "Ledgy AG <contact@ledgy.com>",
   "repository": "morloy/ledgy-app",
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
-    "@babel/preset-flow": "^7.0.0-beta.40",
-    "@babel/preset-react": "^7.0.0-beta.40",
-    "@lingui/react": "^2.0.5",
-    "aos": "^2.2.0",
-    "bootstrap": "^4.0.0",
-    "et-line": "^1.0.1",
-    "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.183",
-    "gatsby-image": "^1.0.35",
-    "gatsby-link": "^1.6.36",
-    "gatsby-plugin-google-tagmanager": "^1.0.15",
-    "gatsby-plugin-manifest": "^1.0.15",
-    "gatsby-plugin-netlify": "^1.0.17",
-    "gatsby-plugin-offline": "^1.0.15",
-    "gatsby-plugin-react-helmet": "^2.0.4",
-    "gatsby-plugin-react-next": "^1.0.10",
-    "gatsby-plugin-sass": "^1.0.18",
-    "gatsby-plugin-sharp": "^1.6.13",
-    "gatsby-plugin-sitemap": "^1.2.12",
-    "gatsby-source-filesystem": "^1.5.18",
-    "gatsby-transformer-sharp": "^1.6.18",
-    "lity": "^2.3.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-helmet": "^5.2.0",
-    "slick-carousel": "^1.8.1"
+    "@babel/core": "~7.0.0-beta.40",
+    "@babel/preset-env": "~7.0.0-beta.40",
+    "@babel/preset-flow": "~7.0.0-beta.40",
+    "@babel/preset-react": "~7.0.0-beta.40",
+    "@lingui/react": "~2.0.5",
+    "aos": "~2.2.0",
+    "bootstrap": "~4.0.0",
+    "et-line": "~1.0.1",
+    "font-awesome": "~4.7.0",
+    "gatsby": "~1.9.183",
+    "gatsby-image": "~1.0.35",
+    "gatsby-link": "~1.6.36",
+    "gatsby-plugin-google-tagmanager": "~1.0.15",
+    "gatsby-plugin-manifest": "~1.0.15",
+    "gatsby-plugin-netlify": "~1.0.17",
+    "gatsby-plugin-offline": "~1.0.15",
+    "gatsby-plugin-react-helmet": "~2.0.4",
+    "gatsby-plugin-react-next": "~1.0.10",
+    "gatsby-plugin-sass": "~1.0.18",
+    "gatsby-plugin-sharp": "~1.6.13",
+    "gatsby-plugin-sitemap": "~1.2.12",
+    "gatsby-source-filesystem": "~1.5.18",
+    "gatsby-transformer-sharp": "~1.6.18",
+    "lity": "~2.3.0",
+    "react": "~16.2.0",
+    "react-dom": "~16.2.0",
+    "react-helmet": "~5.2.0",
+    "slick-carousel": "~1.8.1"
   },
   "keywords": [
     "ledgy"
@@ -66,15 +66,15 @@
     }
   },
   "devDependencies": {
-    "@lingui/babel-preset-react": "^2.0.5",
-    "babel-eslint": "^8.2.2",
-    "eslint": "^4.17.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-flowtype": "^2.46.1",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "flow-bin": "^0.66.0"
+    "@lingui/babel-preset-react": "~2.0.5",
+    "babel-eslint": "~8.2.2",
+    "eslint": "~4.18.2",
+    "eslint-config-airbnb": "~16.1.0",
+    "eslint-plugin-flowtype": "~2.46.1",
+    "eslint-plugin-import": "~2.9.0",
+    "eslint-plugin-jsx-a11y": "~6.0.3",
+    "eslint-plugin-react": "~7.7.0",
+    "flow-bin": "~0.67.1"
   },
   "lingui": {
     "fallbackLocale": "en",
