--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-google-tagmanager": "~1.0.15",
     "gatsby-plugin-manifest": "~1.0.15",
     "gatsby-plugin-netlify": "~1.0.17",
+    "gatsby-plugin-nprogress": "~1.0.14",
     "gatsby-plugin-offline": "~1.0.15",
     "gatsby-plugin-react-helmet": "~2.0.4",
     "gatsby-plugin-react-next": "~1.0.10",
@@ -29,7 +30,7 @@
     "gatsby-source-filesystem": "~1.5.18",
     "gatsby-transformer-sharp": "~1.6.18",
     "lity": "~2.3.0",
-    "lodash": "^4.17.5",
+    "lodash": "~4.17.5",
     "react": "~16.2.0",
     "react-dom": "~16.2.0",
     "react-helmet": "~5.2.0",
