--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,10 @@
       "presets": [
         "@babel/preset-react",
         "@babel/preset-flow",
+      ],
+      "plugins": [
+        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-proposal-class-properties",
       ]
     },
   }
