--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     }
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "~7.0.0-beta.40",
     "@lingui/babel-preset-react": "~2.0.5",
     "babel-eslint": "~8.2.2",
     "eslint": "~4.18.2",
