--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "test": "eslint . --ext jsx,js && flow",
-    "extract": "BABEL_ENV=extract lingui extract"
+    "extract": "BABEL_ENV=extract lingui extract --clean && i18next-conv -l de -s src/locale/de/messages.json -t src/locale/de.po"
   },
   "eslintConfig": {
     "extends": [
@@ -70,6 +70,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "~7.0.0-beta.40",
     "@lingui/babel-preset-react": "~2.0.5",
+    "@lingui/cli": "~2.0.5",
     "babel-eslint": "~8.2.2",
     "eslint": "~4.18.2",
     "eslint-config-airbnb": "~16.1.0",
@@ -77,7 +78,8 @@
     "eslint-plugin-import": "~2.9.0",
     "eslint-plugin-jsx-a11y": "~6.0.3",
     "eslint-plugin-react": "~7.7.0",
-    "flow-bin": "~0.67.1"
+    "flow-bin": "~0.67.1",
+    "i18next-conv": "~6.0.0"
   },
   "lingui": {
     "fallbackLocale": "en",
