--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "gatsby-plugin-sitemap": "~1.2.20",
     "gatsby-source-filesystem": "~1.5.18",
     "gatsby-transformer-sharp": "~1.6.18",
+    "jquery": "~3.3.1",
     "lity": "~2.3.0",
     "lodash": "~4.17.5",
+    "popper.js": "~1.14.2",
     "react": "~16.3.0",
     "react-dom": "~16.3.0",
     "react-helmet": "~5.2.0",
