--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
   - "7"
-  - "8"
 install:
   - yarn install
+  - chmod +x push.sh
 cache:
   yarn: true
   directories:
